--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title> </title>
-    <link rel="stylesheet" href="../css/styling.css" type="text/css" />
+    <link rel="stylesheet" href="styling.css" type="text/css" />
   </head>
   <body>
     <!-- [OPEN] {header} -->
