--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
         <li><a href="#">About</a></li>
       </ul>
     </header>
-    <section class="banner"></section>
+
+
     <script type="text/javascript">
       window.addEventListener("scroll", function () {
         var header = document.querySelector("header");
         header.classList.toggle("sticky", window.scrollY > 0);
       });
     </script>
+    
 <footer>
-<p><h2>contact</h2></p>
+  <hr class="hrr">
+<p>
+  <h2>Contact Me :</h2></p>
 </footer>
   </body>
 </html>
