--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
 <div class="azx">
-<h1>Ahmed aljabor, Sell Azez your laptop please...</h1>
+<h1>Welcome!, nothing here to stare at!.</h1>
 </div>
     <script type="text/javascript">
       window.addEventListener("scroll", function () {
