--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SadNoises</title>
+    <title>azezio</title>
     <link rel="stylesheet" href="styling.css" type="text/css" />
   </head>
   <body>
