--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AzezIO</title>
     <link rel="stylesheet" href="styling.css" type="text/css" />
   </head>
@@ -15,7 +16,7 @@
     </header>
 
 <div class="azx">
-<h1>Welcome!, nothing here to stare at!.</h1>
+<h1>welcome, this website is under slow development process, (although portfolio websites don’t include such statement, i do, proudly!!.</h1>
 </div>
     <script type="text/javascript">
       window.addEventListener("scroll", function () {
