--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
 <div class="azx">
-<h1>welcome, this website is under slow development process, (although portfolio websites don’t include such statement, i do, proudly!!.</h1>
+<h1>testing some web silliness!..</h1>
 </div>
     <script type="text/javascript">
       window.addEventListener("scroll", function () {
