--- a/index.html
+++ b/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
-<html>
- 
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AzezIO</title>
-    <link rel="stylesheet" href="styling.css" type="text/css" />
-  </head>
-  
-  <body>
-    
-<div> toggleee-0Xuf0 </div>
 
-  </body>
+<head>
+    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="crap.js"></script>
+</head>
+
+<body>
+
+    <div class="header">
+        <a href="#home">Azezio</a>
+    </div>
+    <br>
+    <hr class="hrl">
+    <div class="contents">
+        <br>
+        <p>blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah
+            blah blahblah blah blah blahblah blah blah blahblah blah blah
+            blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blahblah blah>
+            blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah</p>
+
+        <br>
+
+        <p>blah blahblah blah blah blahblah blah blah blahblah blah blah
+            blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blahblah blah
+            blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah
+            blah blahblah blah blah blahblah blah blah blahblah blah blah
+        <p>blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blahblah blah </p>
+        <br>
+        <hr>
+    </div>
+</body>
+
 </html>
