--- a/index.html
+++ b/index.html
@@ -14,23 +14,58 @@
         <a href="#home">Azezio</a>
     </div>
     <br>
-    <hr class="hrl">
-    <div class="contents">
+    <br>
+    <div class="cardsContainer">
+        <div class="card1">
+            <br>
+            <div>
+                <h2>card_name</h2>
+            </div>
+            <br>
+            <div class="cardData">
+                <p>blah blah and some random blah.blah blah
+                    blah blah and some random blah.
+                    blah blah and some random blah.blah blah
+                    blah blah and some random blah.blah blahblah blah
+                    blah blah and some random blah.
+                    blah blah and some random blah.blah blahblah blahblah blah</p>
+            </div>
+            <br>
+        </div>
         <br>
-        <p>blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah
-            blah blahblah blah blah blahblah blah blah blahblah blah blah
-            blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blahblah blah>
-            blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah</p>
-
+        <div class="card1">
+            <br>
+            <div>
+                <h2>card_name</h2>
+            </div>
+            <br>
+            <div class="cardData">
+                <p>blah blah and some random blah.blah blah
+                    blah blah and some random blah.
+                    blah blah and some random blah.blah blah
+                    blah blah and some random blah.blah blahblah blah
+                    blah blah and some random blah.
+                    blah blah and some random blah.blah blahblah blahblah blah</p>
+            </div>
+            <br>
+        </div>
         <br>
-
-        <p>blah blahblah blah blah blahblah blah blah blahblah blah blah
-            blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blahblah blah
-            blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah
-            blah blahblah blah blah blahblah blah blah blahblah blah blah
-        <p>blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blahblah blah </p>
-        <br>
-        <hr>
+        <div class="card1">
+            <br>
+            <div>
+                <h2>card_name</h2>
+            </div>
+            <br>
+            <div class="cardData">
+                <p>blah blah and some random blah.blah blah
+                    blah blah and some random blah.
+                    blah blah and some random blah.blah blah
+                    blah blah and some random blah.blah blahblah blah
+                    blah blah and some random blah.
+                    blah blah and some random blah.blah blahblah blahblah blah</p>
+            </div>
+            <br>
+        </div>
     </div>
 </body>
 
