--- a/index.html
+++ b/index.html
@@ -1,70 +1,120 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Title</title>
+    <title>YardnaIO</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="crap.js"></script>
+    <link rel="stylesheet" href="main.css">
+    <script src="main.js"></script>
 </head>
 
 <body>
 
     <div class="header">
-        <a href="#home">Azezio</a>
+        <a class="headerLogo" href="index.html">YardnaIO</a>
+        <a class="headerItems" href="about.html">About</a>
+        <a class="headerItems" href="projects.html">Projects</a>
+        <a class="headerItems" href="index.html">Home</a>
     </div>
     <br>
-    <br>
     <div class="cardsContainer">
-        <div class="card1">
-            <br>
-            <div>
-                <h2>card_name</h2>
-            </div>
-            <br>
-            <div class="cardData">
-                <p>blah blah and some random blah.blah blah
-                    blah blah and some random blah.
-                    blah blah and some random blah.blah blah
-                    blah blah and some random blah.blah blahblah blah
-                    blah blah and some random blah.
-                    blah blah and some random blah.blah blahblah blahblah blah</p>
-            </div>
-            <br>
+        <div class="cardTitle">
+            <p>home ..</p>
         </div>
-        <br>
-        <div class="card1">
-            <br>
-            <div>
-                <h2>card_name</h2>
-            </div>
-            <br>
-            <div class="cardData">
-                <p>blah blah and some random blah.blah blah
-                    blah blah and some random blah.
-                    blah blah and some random blah.blah blah
-                    blah blah and some random blah.blah blahblah blah
-                    blah blah and some random blah.
-                    blah blah and some random blah.blah blahblah blahblah blah</p>
-            </div>
-            <br>
-        </div>
-        <br>
-        <div class="card1">
-            <br>
-            <div>
-                <h2>card_name</h2>
-            </div>
-            <br>
-            <div class="cardData">
-                <p>blah blah and some random blah.blah blah
-                    blah blah and some random blah.
-                    blah blah and some random blah.blah blah
-                    blah blah and some random blah.blah blahblah blah
-                    blah blah and some random blah.
-                    blah blah and some random blah.blah blahblah blahblah blah</p>
-            </div>
-            <br>
+        <div class="cardData">
+            <p>blah blah and some random blah.blah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.blah blahblah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blahblah blahblah blah
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.blah blahblah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blahblah blahblah blah
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.blah blahblah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blahblah blahblah blah
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.blah blahblah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blahblah blahblah blah
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.blah blahblah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blahblah blahblah blah.
+
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.blah blahblah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blahblah blahblah blah
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.blah blahblah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blahblah blahblah blah
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.blah blahblah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blahblah blahblah blah
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.blah blahblah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blahblah blahblah blah
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.blah blahblah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blahblah blahblah blah
+
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.blah blahblah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blahblah blahblah blah
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.blah blahblah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blahblah blahblah blah
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.blah blahblah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blahblah blahblah blah
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.blah blahblah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blahblah blahblah blah
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blah
+                blah blah and some random blah.blah blahblah blah
+                blah blah and some random blah.
+                blah blah and some random blah.blah blahblah blahblah blah
+            </p>
         </div>
     </div>
 </body>
