--- a/index.html
+++ b/index.html
@@ -17,103 +17,45 @@
         <a class="headerItems" href="index.html">Home</a>
     </div>
     <br>
+    <div class="topContent">
+        <p>aaa</p>
+        <p>bbb</p>
+        <p>ccc</p>
+        <p>ddd</p>
+        <p>eee</p>
+    </div>
+    <br>
     <div class="cardsContainer">
         <div class="cardTitle">
             <p>home ..</p>
         </div>
         <div class="cardData">
-            <p>blah blah and some random blah.blah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.blah blahblah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blahblah blahblah blah
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.blah blahblah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blahblah blahblah blah
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.blah blahblah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blahblah blahblah blah
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.blah blahblah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blahblah blahblah blah
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.blah blahblah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blahblah blahblah blah.
-
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.blah blahblah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blahblah blahblah blah
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.blah blahblah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blahblah blahblah blah
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.blah blahblah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blahblah blahblah blah
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.blah blahblah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blahblah blahblah blah
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.blah blahblah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blahblah blahblah blah
-
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.blah blahblah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blahblah blahblah blah
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.blah blahblah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blahblah blahblah blah
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.blah blahblah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blahblah blahblah blah
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.blah blahblah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blahblah blahblah blah
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.blah blahblah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blahblah blahblah blah
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem aliquam omnis deserunt praesentium
+                beatae ipsam error. Facere totam ad harum dolorum sapiente excepturi quod velit expedita, inventore
+                quae. Tempore, quidem?, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem aliquam
+                omnis deserunt praesentium
+                beatae ipsam error. Facere totam ad harum dolorum sapiente excepturi quod velit expedita, inventore
+                quae. Tempore, quidem.. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem aliquam
+                omnis deserunt praesentium
+                beatae ipsam error. Facere totam ad harum dolorum sapiente excepturi quod velit expedita, inventore
+                quae. Tempore, quidem?.
+            </p>
+        </div>
+    </div>
+    <div class="cardsContainer">
+        <div class="cardTitle">
+            <p>home2 ..</p>
+        </div>
+        <div class="cardData">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem aliquam omnis deserunt praesentium
+                beatae ipsam error. Facere totam ad harum dolorum sapiente excepturi quod velit expedita, inventore
+                quae. Tempore, quidem?, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem aliquam
+                omnis deserunt praesentium
+                beatae ipsam error. Facere totam ad harum dolorum sapiente excepturi quod velit expedita, inventore
+                quae. Tempore, quidem.. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem aliquam
+                omnis deserunt praesentium
+                beatae ipsam error. Facere totam ad harum dolorum sapiente excepturi quod velit expedita, inventore
+                quae. Tempore, quidem?.
             </p>
         </div>
     </div>
