--- a/about.html
+++ b/about.html
@@ -17,6 +17,14 @@
         <a class="headerItems" href="index.html">Home</a>
     </div>
     <br>
+    <div class="topContent">
+        <p>aaa</p>
+        <p>bbb</p>
+        <p>ccc</p>
+        <p>ddd</p>
+        <p>eee</p>
+    </div>
+    <br>
     <div class="cardsContainer">
         <div class="cardTitle">
             <p>About ..</p>
