--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,14 @@
         <a class="headerItems" href="index.html">Home</a>
     </div>
     <br>
+    <div class="topContent">
+        <p>aaa</p>
+        <p>bbb</p>
+        <p>ccc</p>
+        <p>ddd</p>
+        <p>eee</p>
+    </div>
+    <br>
     <div class="cardsContainer">
         <div class="cardTitle">
             <p>Projects ..</p>
@@ -44,22 +52,7 @@
                 blah blah and some random blah.blah blahblah blah
                 blah blah and some random blah.
                 blah blah and some random blah.blah blahblah blahblah blah
-                <br>
-                blah blah and some random blah.blah blahblah blahblah blah
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.blah blahblah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blahblah blahblah blah
-                <br>
-                blah blah and some random blah.blah blahblah blahblah blah
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blah
-                blah blah and some random blah.blah blahblah blah
-                blah blah and some random blah.
-                blah blah and some random blah.blah blahblah blahblah blah
+                
             </p>
         </div>
     </div>
