--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </a>
   </div>
   <div class="introBG">
-    <img src="/assets/img/Image by jcomp on Freepik.png" alt="">
+    <img src="/assets/img/tinywow_Image by jcomp on Freepik.webp" alt="">
   </div>
   <div class="intro">
     <p class="gt">زراعة - إنتاج - ثم إليك ..</p>
